--- a/client/views/index.html
+++ b/client/views/index.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand logo" href="#"><img src="images/logo.png"></a>
+            <a class="navbar-brand logo" href="#" ui-sref="accounts"><img src="images/logo.png"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
