--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -6,63 +6,71 @@
         <div class="main-right col-xs-9">
             <div class="col-xs-6 account-edit">
                 <h2 class="login-heading">Add Account</h2>
-                <form ng-submit="addOrUpdateAccount()" class="margin-top-20">
-                    <div class="form-group">
-                        <label for="accountId">Account Name</label>
-                        <input ng-model="account.name" ng-readonly="account._id" type="text" class="form-control"
-                               id="accountId"
-                               placeholder="Account Name">
+                <form ng-submit="addOrUpdateAccount()" class="mt-10">
+                    <div class="form-group col-xs-12">
+                        <label for="accountId" class="col-sm-4 pall-zero">Account Name</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input ng-model="account.name" ng-readonly="account._id" type="text" class="form-control"
+                                   id="accountId"
+                                   placeholder="Account Name">
+                        </div>
                     </div>
 
-                    <div class="form-group" ng-hide="account._id">
-                        <label for="userName">User Name</label>
-                        <input ng-model="account.userName" type="text" class="form-control" id="userName"
-                               placeholder="User name">
+                    <div class="form-group col-xs-12" ng-hide="account._id">
+                        <label for="userName" class="col-sm-4 pall-zero col-xs-12">User Name</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="account.userName" type="text" class="form-control" id="userName"
+                                   placeholder="User name">
+                        </div>
                     </div>
 
-                    <div class="form-group" ng-hide="account._id">
-                        <label for="password">Password</label>
-                        <input ng-model="account.password" type="password" class="form-control" id="password"
-                               placeholder="Password">
+                    <div class="form-group col-xs-12" ng-hide="account._id">
+                        <label for="password" class="col-sm-4 pall-zero col-xs-12">Password</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="account.password" type="password" class="form-control" id="password"
+                                   placeholder="Password">
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="address">Address</label>
-                        <input ng-model="account.address" type="text" class="form-control" id="address"
-                               placeholder="Address">
+                    <div class="form-group col-xs-12">
+                        <label for="address" class="col-sm-4 pall-zero col-xs-12">Address</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="account.address" type="text" class="form-control" id="address"
+                                   placeholder="Address">
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="contact">Contact Number</label>
-                        <input ng-model="account.contact" type="text" class="form-control" id="contact"
-                               placeholder="Contact Number">
+                    <div class="form-group col-xs-12">
+                        <label for="contact" class="col-sm-4 pall-zero col-xs-12">Contact Number</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="account.contact" type="text" class="form-control" id="contact"
+                                   placeholder="Contact Number">
+                        </div>
                     </div>
 
                     <div class="checkbox">
                         <label><input type="checkbox" ng-model="account.isActive">Account status</label>
                     </div>
 
+                    <div class="clearfix"></div>
                     <div>
-                        <div>
-                            <div class="alert alert-danger" role="alert" ng-show="account.error">
-                                <strong>{{account.error}}</strong>
-                            </div>
-
-                            <div class="alert alert-success" role="alert" ng-show="account.success">
-                                <strong>{{account.success}}</strong>
-                            </div>
+                        <div class="alert alert-danger" role="alert" ng-show="account.error">
+                            <strong>{{account.error}}</strong>
                         </div>
+
                         <div class="alert alert-success" role="alert" ng-show="account.success">
                             <strong>{{account.success}}</strong>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
-
                     </div>
+                <div class="col-xs-6 col-xs-push-3">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                </div>
                 </form>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 
