--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -8,7 +8,7 @@
 
         <div class="main-right col-sm-9 col-xs-12">
             <div class="col-xs-12 account-edit">
-                <h2 class="login-heading text-center">{{pageTitle}}</h2>
+                <h2 class="login-heading">{{pageTitle}}</h2>
                 <div class="col-sm-6 col-xs-12 mt-10">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 col-xs-12 pall-zero">Registration No :</label>
@@ -39,12 +39,24 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Driver </label>
+                        <div class="col-sm-8 col-xs-12">
+                            <select class="form-control" ng-model="truck.driverId">
+                                <option value="">Select</option>
+                                <option></option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Fitness Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
                             <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"></date-picker>
                         </div>
                     </div>
 
+                </div>
+                <div class="col-sm-6 col-xs-12 mt-10">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Permit Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
@@ -58,8 +70,6 @@
                                          class="custom-form-control"></date-picker>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 col-xs-12 mt-10">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Pollution Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
