--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -8,7 +8,7 @@
 
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">Add Driver</h2>
+                <h2 class="login-heading">{{pageTitle}}</h2>
                 <form ng-submit="addOrUpdateAccount()">
                     <div class="col-xs-6 col-xs-12 mt-10">
                         <div class="form-group col-xs-12">
