--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -64,22 +64,18 @@
                         <div class="form-group col-xs-12">
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox" ng-model="driver.status"> Driver Status
+                                    <input type="checkbox" ng-model="driver.isActive"> Driver Status
                                 </label>
                             </div>
                         </div>
 
                     </div>
+
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
                         <div class="alert alert-danger" role="alert" ng-show="driver.errors.length">
                             <ul>
                                 <li ng-repeat="error in driver.errors">{{error}}</li>
-                            </ul>
-                        </div>
-                        <div class="alert alert-success" role="alert" ng-show="driver.success.length">
-                            <ul>
-                                <li ng-repeat="success in driver.success">{{success}}</li>
                             </ul>
                         </div>
                         <button type="submit" class="btn btn-primary" ng-click="addOrSaveDriver()">Submit</button>
