--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -121,6 +121,14 @@
                                        placeholder="Remarks">
                             </div>
                         </div>
+                        <div class="form-group col-xs-12">
+                            <label for="remarks" class="col-xs-12 col-sm-4 pall-zero">Share</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.share" type="checkbox" class="form-control"
+                                       id="share"
+                                       placeholder="Share">
+                            </div>
+                        </div>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4 margin-top-20">
