--- a/client/views/templates/expiryTrucks.html
+++ b/client/views/templates/expiryTrucks.html
@@ -1,30 +1,35 @@
 <div class="main-temp col-xs-12 mt-20">
     <div class="col-xs-12 pall-zero db-expenses">
-        <div class="col-xs-3 pall-zero"><p>Total Expiry</p></div>
+        <div class="col-xs-3 pall-zero">
+            <p>Total Expiry</p>
+        </div>
         <div class="col-xs-9 pall-zero">
             <ul class="list-inline pull-right">
-                <li class="col-xs-6 pos-relative">
-                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <input type="text" ng-model="filters.regNumber"
-                           uib-typeahead="totalExpensesbyVehicle.regNumber for totalExpensesbyVehicle in totalExpensesbyVehicle | filter:$viewValue"
-                           class="form-control textfield trucksfield" typeahead-min-length="1"
-                           typeahead-on-select="selectTruckId($item)"
-                           typeahead-select-on-exact="true" placeholder="Registration Num"
-                           typeahead-no-results="noTrucks" autocomplete="false">
+                <li class="col-xs-6  pos-relative">
+                    <span class="bot-arrow">
+                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                    <input type="text" ng-model="filters.regNumber" uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
+                        class="form-control textfield" typeahead-min-length="1" typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
+                        placeholder="Registration Num" typeahead-no-results="noTrucks" autocomplete="false">
                     <div ng-show="noTrucks">
                         <i class="glyphicon glyphicon-remove red"></i>
                         <span class="red"> No Results Found </span>
                     </div>
                 </li>
                 <li class="col-xs-2">
-                    <button ng-click="validateFilters()" type="button" class="btn go">Go</button>
+                    <button ng-click="getTruckExpires()" type="button" class="btn go">Go</button>
                 </li>
                 <li class="col-xs-2">
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                    <button type="button" ng-click="shareExpairedDetailsViaEmail();" class="btn mailImage">
+                        <img src="images/Reports_Mail.png">
+                    </button>
                 </li>
 
                 <li class="col-xs-2">
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                    <button type="button" ng-click="downloadExpairyDetailsByTruck();" class="btn mailImage">
+                        <img src="images/Reports_Download.png">
+                    </button>
                 </li>
             </ul>
             <ul class="list-inline mailDownload">
