--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -182,6 +182,9 @@ body {
     color: #fff;
     box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
 }
+.menu-header .navbar-nav > li > a:focus{
+    color: #fff;
+}
 
 .menu-header .navbar-nav > li > a > img {
     display: block;
