--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -1,6 +1,6 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="vehicleExpenses();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="vehicleRevenue()" ui-sref="reports">
+        <div class="reports-panel" ui-sref="reports">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -18,7 +18,7 @@
 
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel activated" ng-click="vehicleExpenses()" ui-sref="expenseByVehicles">
+        <div class="reports-panel activated" ui-sref="expenseByVehicles">
             <div class="reports-image">
                 <figure>
                     <img src="images/expenses.png">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments">
+        <div class="reports-panel payments" ui-sref="receivableByParty">
 
             <div class="reports-image">
                 <figure>
@@ -42,18 +42,18 @@
                 </figure>
             </div>
             <div class="reports-text">
-                <h3 ng-class="{'h3activated':activated==='4'}">Payments</h3>
+                <h3>Payments</h3>
                 <p>From All Parties</p>
             </div>
             <div class="col-xs-12 pall-zero">
                 <ul class="list-inline">
-                    <li class="payble" ng-click="paybleByParty()" ui-sref="payableByParty">
+                    <li class="payble" ui-sref="payableByParty">
                         <span class="payable">Payable</span><br>
                         <small><i class="fa fa-inr"></i>
                             {{totals.paybleAmount || 0}}
                         </small>
                     </li>
-                    <li class="payble" ng-click="paymentsReceivable()" ui-sref="receivableByParty">
+                    <li class="payble" ui-sref="receivableByParty">
                         <span class="receivable">Receivable</span> <br>
                         <small><i class="fa fa-inr"></i>
                             {{totals.pendingDue || 0}}
@@ -68,7 +68,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="getTruckExpirs()" ui-sref="listOfExpireTrucks">
+        <div class="reports-panel" ui-sref="listOfExpireTrucks">
             <div class="col-xs-12 pall-zero">
                 <div class="reports-image">
                     <figure>
