--- a/client/views/partials/reports/payableByParty.html
+++ b/client/views/partials/reports/payableByParty.html
@@ -190,9 +190,9 @@
                 </tr>
                 <tr class="text-center">
                     <td colspan="2"><b>Total</b></td>
-                    <td><b>{{grossAmounts.totalAmount}}</b></td>
-                    <td><b>{{grossAmounts.paidAmount}}</b></td>
-                    <td><b>{{grossAmounts.payableAmount}}</b></td>
+                    <td><b>{{gross.totalAmount}}</b></td>
+                    <td><b>{{gross.paidAmount}}</b></td>
+                    <td><b>{{gross.payableAmount}}</b></td>
 
 
                 </tr>
