--- a/client/views/partials/reports/receivableByParties.html
+++ b/client/views/partials/reports/receivableByParties.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="paymentsReceivable();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" >
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel" ui-sref="reports">
             <div class="reports-image">
@@ -99,9 +99,8 @@
         </div>
     </div>
 
-
     <div class="col-xs-12">
-        <div class="main-temp col-xs-12 mt-20" ng-init="getAmountsByparty();getAllParties();">
+        <div class="main-temp col-xs-12 mt-20" ng-init="paymentsReceivable();getAllParties();">
             <div class="col-xs-12 pall-zero db-expenses">
                 <div class="col-xs-3 pall-zero"><p>Total Receivables</p></div>
                 <div class="col-xs-9 pall-zero">
@@ -163,7 +162,7 @@
                 </div>
             </div>
 
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
+            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="receivableParams">
                 <tr ng-repeat="amountByParties in parties" style="text-align: center;">
                     <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item col-sm-2">
                         <a href="#"
