--- a/client/views/partials/admin/orderProcess/orderProcess.html
+++ b/client/views/partials/admin/orderProcess/orderProcess.html
@@ -1,8 +1,8 @@
 <div class="col-xs-12 cus-main" ng-controller="orderProcessCtrl">
     <ul class="list-inline custom-ul">
-        <li ui-sref-active="activated"><a href="#" ui-sref="orderProcess.truckRequest">Truck Request</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="orderProcess.loadRequest">Load Request</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="orderProcess.viewOrder">View Orders</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="orderprocess.truckRequest">Truck Request</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="orderprocess.loadRequest">Load Request</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="orderprocess.viewOrder">View Orders</a></li>
 
     </ul>
     <ui-view></ui-view>
