--- a/client/views/partials/admin/services/addDevice.html
+++ b/client/views/partials/admin/services/addDevice.html
@@ -17,7 +17,7 @@
             <td><input type="text" class="form-control custom-form-control" name="" placeholder="SIM ID" ng-model="device.simNumber"/></td>
             <td>
                 <a href="#" class="btn" ng-click="addDeviceRow()" ng-show="$index === devicesToAdd.length-1"><i class="fa fa-plus-square"></i></a>
-                <a href="#" class="btn" ng-click="removeDeviceRow($index)" ng-show="$index < devicesToAdd.length-1"><i class="fa fa-minus-square"></i></a>
+                <a href="#" class="btn" ng-click="removeDeviceRow($index)" ng-show="devicesToAdd.length > 1"><i class="fa fa-minus-square"></i></a>
             </td>
         </tr>
         </tbody>
