--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -2,7 +2,7 @@
     <h4>GPS / ERP Account</h4>
     <div class="col-xs-12">
         <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="status.isFirstOpen">
+            <div uib-accordion-group class="panel-default" is-open="true">
                 <uib-accordion-heading>
                     User Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                 </uib-accordion-heading>
@@ -29,13 +29,13 @@
                         </div>
                         <div class="form-group">
                             <select class="form-control custom-form-control" ng-model="deviceDetails.truckId" ng-change="getSelectedTruckDetails()">
-                                <option value="" selected>Select</option>
+                                <option value="" selected>Select truck</option>
                                 <option ng-repeat="truck in trucks" value="{{truck._id}}">{{truck.registrationNo}}</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <select class="form-control custom-form-control" ng-model="deviceDetails.installedBy">
-                                <option value="" selected>Select</option>
+                                <option value="" selected>Installed by</option>
                                 <option ng-repeat="employee in employees" value="{{employee.id_admin}}">{{employee.displayName}}</option>
                             </select>
                         </div>
@@ -142,12 +142,72 @@
                 </div>
 
             </div>
+            <div uib-accordion-group class="panel-default">
+                <uib-accordion-heading>
+                    Assign Plans <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                </uib-accordion-heading>
+                <div class="col-xs-12">
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="form-group">
+                            <select class="form-control" ng-model="addPlan.planId">
+                                <option value="" selected>Select truck</option>
+                                <option ng-repeat="truck in trucks" value="{{truck._id}}">{{truck.registrationNo}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Date" ng-model="addPlan.date"/>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Amount" ng-model="addPlan.amount"/>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-2">
+                        <div class="form-group">
+                            <a href="#" class="btn btn-primary" style="width: 100% !important;">Add</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12">
+                    <table class="table table-bordered table-responsive">
+                        <thead>
+                        <tr>
+                            <th>Plan Name</th>
+                            <th>Plan Amount</th>
+                            <th>Payable Amount</th>
+                            <th>Received</th>
+                            <th>Remarks</th>
+                            <th>Start Time</th>
+                            <th>Expiry Time</th>
+                            <th>Created Time</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="plan in devicePlanHistory">
+                        <!--<tr>-->
+                            <td>{{plan.planId.planName}}</td>
+                            <td>{{plan.planId.amount}}</td>
+                            <td>{{plan.amount}}</td>
+                            <td>{{plan.received}}</td>
+                            <td>{{plan.remark}}</td>
+                            <td>{{plan.startTime | date: 'mediumDate'}}</td>
+                            <td>{{plan.expiryTime | date: 'mediumDate'}}</td>
+                            <td>{{plan.creationTime | date: 'mediumDate'}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
         </uib-accordion>
         <div class="col-xs-12 save-btns">
             <div ng-show="deviceDetails.error">{{deviceDetails.error}}</div>
             <a href="#" class="btn btn-danger" ui-sref="services.gpsDevices">Cancel</a>
             <a href="#" class="btn btn-primary" ng-click="updateDevice()">Submit</a>
-
         </div>
     </div>
 </div>
