--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -51,7 +51,7 @@
                 {{device.received}}
             </td>
             <td data-title="'Status'" sortable="'isDamaged'" class="clickable-item">
-                {{device.isDamaged === '0' && 'working' || 'Not working'}}
+                {{device.isDamaged == '0' && 'working' || 'Not working'}}
             </td>
             <td data-title="'Edit/Delete'" sortable="'imei'" class="clickable-item">
                 <a href="#" ui-sref="services.editGpsDevice({device: device._id})">Edit /</a>
