--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -9,7 +9,7 @@
                 </uib-accordion-heading>
                 <div class="col-xs-12">
                     <div class="col-xs-12 col-sm-6">
-                        <div class="form-group styling-input-list">
+                        <div class="form-group" style="margin-left: 15px;">
                           <!--  <select class="form-control custom-form-control" ng-model="deviceDetails.accountId"
                                     ng-change="getTrucksOfAccount()">
                                 <option ng-repeat="account in accounts" value="{{account._id}}">{{account.userName}}
@@ -18,10 +18,10 @@
                             </select>-->   <div class="form-group select-box">
                             <ui-select ng-model="deviceDetails.accountId" theme="select2"
                                        style="min-width: 390px;"
-                                       title="Customer *" reset-search-input="false">
+                                       title="Customer *" reset-search-input="false" ng-change="getTrucksOfAccount()">
 
-                                <ui-select-match placeholder="Customer *" class="form-control order-form-control">
-                                    {{$select.selected.firstName || firstName}}
+                                <ui-select-match placeholder="Select Customer *" class="form-control custom-form-control" >
+                                    {{$select.selected.userName || userName}}
                                 </ui-select-match>
                                 <ui-select-choices
                                         repeat="account in accounts " refresh="searchAccountOwner($select.search)"
@@ -36,7 +36,7 @@
                             </ui-select>
 
                         </div>
-                            <label class="focus-effect-for-input">Account</label>
+                            <!--<label class="focus-effect-for-input">Account</label>-->
                             <!--<ui-select ng-model="deviceDetails.accountId" theme="select2"
                                        style="min-width: 390px;"
                                        title="Choose a person" append-to-body="true">
@@ -54,15 +54,15 @@
                                    ng-model="deviceDetails.imei"/>
                             <label class="focus-effect-for-input">Device Id</label>
                         </div>-->
-                        <div class="form-group styling-input-list">
+                        <div class="form-group ">
                             <select class="form-control custom-form-control" ng-model="deviceDetails.truckId"
                                     ng-change="getSelectedTruckDetails()">
                                 <option ng-repeat="truck in trucks" value="{{truck._id}}">{{truck.registrationNo}}
                                 </option>
                             </select>
-                            <label class="focus-effect-for-input">Truck Reg no</label>
+                            <!--<label class="focus-effect-for-input">Truck Reg no</label>-->
                         </div>
-                        <div class="form-group styling-input-list">
+                        <div class="form-group ">
                             <select class="form-control custom-form-control" ng-model="deviceDetails.installedBy">
                                 <option value="" >Select Employee</option>
                                 <option ng-repeat="employee in employees" value="{{employee.id_admin}}">
@@ -70,10 +70,10 @@
                                 </option>
                             </select>
                         </div>
-                        <div class="form-group styling-input-list">
+                        <div class="form-group">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="deviceDetails.address"/>
-                            <label class="focus-effect-for-input">Address</label>
+                            <!--<label class="focus-effect-for-input">Address</label>-->
                         </div>
                         <div class="form-group">
                             <p class="smsenabled"><b>Is Damaged</b></p>
