--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -64,15 +64,12 @@
         </div>
         <span ng-if="records.length>0">
                 <div class="col-xs-12 pall-zero mb-10">
-                    <h2 class="table-name">Previous Jobs:</h2>
+                    <h2 class="table-name">Previous Jobs for:{{vehicle}}</h2>
                 </div>
                 <div class="mt-10">
                     <table class="table table-bordered table-striped table-condensed table-hover"
                            ng-table="studentParams">
                         <tr ng-repeat="record in records " style="text-align: center;">
-                            <td data-title="'Vehicle'"  class="clickable-item">
-                                {{vehicle}}
-                            </td>
                             <td data-title="'Last Job Date'" class="clickable-item">
                                 {{record.date | date:'dd-MM-y'}}
                             </td>
